--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "This group project is created and by the Freesytle Squad:  Felipe Hernandez, Kitty Pelerin, and Rastko Sassic of GA.  The name of our App is RotaFlow.  Rota is Latin for wheel or a  form of rotation or roster call, an overview, list of duties, or  in this case, wish items. RotaFlow is a fun, user-friendly,  organization app, which facilitates your wishes easier.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "dev": "nodemon server.js",
+     "start": "node server.js",
+     "debugger": "DEBUG=*:* npm run dev"
   },
   "repository": {
     "type": "git",
