--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "nodemon server.js",
-     "start": "node server.js",
-     "debugger": "DEBUG=*:* npm run dev"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "debugger": "DEBUG=*:* npm run dev"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "morgan": "^1.8.2",
+    "path": "^0.12.7",
     "pg-promise": "^6.8.0"
   }
 }
