--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/DaFreeStyle/rotaflow#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "jquery": "^3.2.1",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
     "pg-promise": "^6.8.0"
