--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "debugger": "DEBUG=*:* npm run dev"
+    "debugger": "DEBUG=*:* npm run dev",
+    "debug": "nodemon --inspect server.js",
+    "rebuild": "webpack -d --progress",
+    "build": "webpack -p",
+    "watch": "webpack -d --progress --watch"
   },
   "repository": {
     "type": "git",
@@ -20,15 +24,48 @@
     "url": "https://github.com/DaFreeStyle/rotaflow/issues"
   },
   "homepage": "https://github.com/DaFreeStyle/rotaflow#readme",
-  "dependencies": {
+  "devDependencies": {
     "axios": "^0.16.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-regenerator-runtime": "^6.5.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.7",
+    "dotenv": "^4.0.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-template": "^5.6.0",
+    "nodemon": "^1.12.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9"
+  },
+  "dependencies": {
     "body-parser": "^1.18.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "eslint": "^4.7.2",
     "express": "^4.15.4",
-    "jquery": "^3.2.1",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
-    "pg-promise": "^6.8.0"
+    "pg-promise": "^6.8.0",
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0"
+  },
+  "engines": {
+    "node": ">=8.5.0"
   }
 }
